name:               hs-sgf-lib
-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            1.9.0.0
stability:          provisional

cabal-version:      >= 1.9.2
build-type:         Simple

maintainer:         sgf.dma@gmail.com
bug-reports:        mailto:sgf.dma@gmail.com

license:            BSD3
license-file:       LICENSE

category:           Other
synopsis:           Sgf's haskell library.
-- A longer description of the package.
-- description:         
tested-with:        GHC == 7.4.1

data-files:         README
extra-source-files: .gitignore
                    tests/words/*.txt
extra-tmp-files:    bin


library
    exposed-modules:    Sgf.List
                        Sgf.OrderedLine
    build-depends:      base == 4.5.*
                        , mtl == 2.1.*
                        , random == 1.0.*
    hs-source-dirs:     src
    ghc-options:        -Wall


test-suite testSgfList
    type:               exitcode-stdio-1.0
    main-is:            testSgfList.hs
    build-depends:      base == 4.5.*, hs-sgf-lib == 1.9.*
    hs-source-dirs:     tests
    ghc-options:        -Wall

