name:               hs-sgf-lib
-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            1.9.0.0
stability:          provisional

-- FIXME: Is this compatible with cabal 1.2?
cabal-version:      >= 1.8
build-type:         Simple

maintainer:         sgf.dma@gmail.com
bug-reports:        mailto:sgf.dma@gmail.com

license:            BSD3
license-file:       LICENSE

category:           Other
synopsis:           Sgf's haskell library.
-- A longer description of the package.
-- description:         
tested-with:        GHC == 6.12.3

data-files:         README
extra-source-files: .gitignore
                    tests/words/*.txt
extra-tmp-files:    bin


library
    exposed-modules:    Sgf.List
                        Sgf.OrderedLine
    build-depends:      base == 4.2.*
                        , mtl == 1.1.*
                        , random == 1.0.*
    hs-source-dirs:     src
    ghc-options:        -Wall


executable testSgfList
    main-is:            testSgfList.hs
    other-modules:	Sgf.List
    build-depends:      base == 4.2.*, mtl == 1.1.*, random == 1.0.*
    hs-source-dirs:     tests src
    ghc-options:        -Wall

